# egyptian-arabic-vocab

./: .gitignore  README.md  index.js  package-lock.json  package.json  scrape.js
csv/: animals.csv  animals_0.csv  city.csv  city_and_transportation.csv  citytransportation_2.csv  clothes.csv  clothing.csv  clothing_3.csv  colors.csv  colors_4.csv  combined.csv  crime_and_punishment.csv  crime_and_punishment_22.csv  education.csv  education_5.csv  education_vocabulary.csv  emotions__and__personality_traits.csv  emotions__and__personality_traits_vocabulary.csv  emotions__personality_traits_6.csv  food.csv  food_7.csv  from_around_the_house_1.csv  geog.csv  geography.csv  geography_8.csv  government_and_politics.csv  government_and_politics_23.csv  human_body.csv  human_body_9.csv  m_crime.csv  m_war.csv  mankind.csv  mankind_and_kinship.csv  mankindkinship_10.csv  media.csv  media_19.csv  media_2.csv  media_20.csv  media_21.csv  media_3.csv  (+26 more)
json/: animals.json  city_and_transportation.json  city_and_transportation_vocabulary.json  clothing.json  clothing_vocabulary.json  colors.json  colors_vocabulary.json  crime_and_punishment.json  education.json  emotions__and__personality_traits.json  emotions__and__personality_traits_vocabulary.json  food.json  food_vocabulary.json  geography.json  government_and_politics.json  government_and_politics_vocabulary.json  human_body.json  mankind_and_kinship.json  mankind_and_kinship_vocabulary.json  media.json  media_2.json  media_3.json  medicine.json  (+15 more)
scripts/egyptian-scraper/: Cargo.toml
scripts/egyptian-scraper/src/: main.rs
(+206 files in other folders)
