[package]
name = "egyptian-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
reqwest = { version = "0.12.3", features = ["blocking"] }
scraper = "0.19.0"
serde = { version = "1.0.197", features = ["derive"] }
